# fingrid-data-collector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: docker-build.yml
backend/: Cargo.toml
backend/src/: fingrid_client.rs  influx.rs  main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Settings.tsx
